extends Control

var socket: StreamPeerTCP
var is_connected := false
var reconnect_timer := 0.0

func _ready():
    print("AutoCI Dashboard ì‹œì‘")
    _connect_to_autoci()
    
func _connect_to_autoci():
    socket = StreamPeerTCP.new()
    var result = socket.connect_to_host("127.0.0.1", 9999)
    if result == OK:
        is_connected = true
        print("AutoCIì— ì—°ê²°ë¨")
    else:
        print("AutoCI ì—°ê²° ì‹¤íŒ¨, ì¬ì‹œë„ ì˜ˆì •...")

func _process(delta):
    if not is_connected:
        reconnect_timer += delta
        if reconnect_timer > 3.0:
            reconnect_timer = 0.0
            _connect_to_autoci()
        return
    
    # ë°ì´í„° ìˆ˜ì‹ 
    if socket.get_available_bytes() > 0:
        var data = socket.get_string(socket.get_available_bytes())
        _process_data(data)

func _process_data(data: String):
    try:
        var json_data = JSON.parse_string(data)
        if json_data:
            _update_dashboard(json_data)
    except:
        pass

func _update_dashboard(data: Dictionary):
    # í˜„ì¬ ì‘ì—… ì—…ë°ì´íŠ¸
    if data.has("current_task"):
        $StatsContainer/CurrentTask.text = "[b]í˜„ì¬ ì‘ì—…:[/b] " + data.current_task
    
    # ì§„í–‰ë¥  ì—…ë°ì´íŠ¸
    if data.has("progress"):
        $StatsContainer/Progress.value = data.progress
    
    # í†µê³„ ì—…ë°ì´íŠ¸
    if data.has("stats"):
        var stats_text = "[b]ğŸ“Š ì‹œìŠ¤í…œ í†µê³„[/b]\n\n"
        stats_text += "â±ï¸ ì‹¤í–‰ ì‹œê°„: " + data.stats.get("uptime", "0") + "\n"
        stats_text += "ğŸ® ìƒì„±ëœ ê²Œì„: " + str(data.stats.get("games_created", 0)) + "ê°œ\n"
        stats_text += "ğŸ“š í•™ìŠµí•œ ì£¼ì œ: " + str(data.stats.get("topics_learned", 0)) + "ê°œ\n"
        stats_text += "ğŸ”§ ì™„ë£Œëœ ì‘ì—…: " + str(data.stats.get("tasks_completed", 0)) + "ê°œ\n"
        stats_text += "ğŸ¤– AI ëª¨ë¸: " + data.stats.get("ai_model", "ë¯¸ì„ íƒ") + "\n"
        $StatsContainer/Stats.text = stats_text
    
    # ë¡œê·¸ ì¶”ê°€
    if data.has("log"):
        var log_entry = "[color=#" + data.get("color", "ffffff") + "]"
        log_entry += "[" + data.get("time", "") + "] "
        log_entry += data.log + "[/color]\n"
        $LogContainer/LogScroll/LogText.append_text(log_entry)
